# fastapi-template-cookiecutter

./: README.md  README.rst  cookiecutter.json  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/template_name/: __init__.py
tests/: __init__.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  README.rst  docker-compose.yml  noxfile.py  pyproject.toml
{{cookiecutter.repo_name}}/docs/: conf.py  index.rst  reference.rst  usage.rst
{{cookiecutter.repo_name}}/scripts/: run_debug.sh  run_nox.sh
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  __main__.py  api.py  config.py  extentions.py  logging.py  logging.yml  main.py  middlewares.py  models.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/auth/: services.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/database/: core.py  manage.py  services.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/item/: models.py  service.py  views.py
{{cookiecutter.repo_name}}/tests/: __init__.py  test_main.py
